<resources>
    <string name="app">REGISTRO DE ESTUDIANTES</string>

    <string name="app_nombre">Nombre</string>
    <string name="app_nombre_input">Ingrese aqui el nombre </string>

    <string name="app_curso">Curso</string>
    <string name="app_curso_input">Ingrese aqui el nombre de su curso </string>

    <string name="app_carrera">Carrera</string>
    <string name="app_carrera_input">Ingrese aqui su carrera profesional </string>


    <!-- Para futuro uso :D -->
    <string-array name = "Carreras">
        <item>Ingenieria de Sistemas</item>
        <item>Ingenieria de Minas</item>
        <item>Ingenieria Geologica</item>
        <item>Ingenieria Electrica</item>
        <item>Ingenieria Electronica</item>
        <item>Ingenieria Mecatronica</item>
    </string-array>

    <string-array name = "Cursos">
        <item>Calculo I</item>
        <item>Calculo II</item>
        <item>Calculo III</item>
        <item>Fisica I</item>
        <item>Fisica II</item>
        <item>Fisica III</item>
    </string-array>

    <string name="app_guardar_btn">Guardar</string>

    <string name="app_mostrar_btn">Mostrar</string>

    <string name="app_eliminar_btn">Eliminar</string>

    <string name="app_actualizar_btn">Actualizar</string>




</resources>